<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityMain"
    >

    <TextView
        android:id="@+id/headline1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/Parand"
        android:textSize="@dimen/headline_size" />

    <TextView
        android:id="@+id/headline2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/headline1"
        android:gravity="center"
        android:text="@string/register_here"
        android:textSize="@dimen/headline_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:id="@+id/tvFirstName"
        android:layout_below="@+id/headline2"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstName"
        android:layout_alignBaseline="@+id/tvFirstName"
        android:layout_toRightOf="@id/tvFirstName"
        android:layout_toEndOf="@+id/tvFirstName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:id="@+id/tvLastName"
        android:layout_below="@+id/tvFirstName"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLastName"
        android:layout_alignBaseline="@+id/tvLastName"
        android:layout_toRightOf="@id/tvFirstName"
        android:layout_toEndOf="@+id/tvFirstName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/tvEmail"
        android:layout_below="@+id/tvLastName"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:layout_alignBaseline="@+id/tvEmail"
        android:layout_toRightOf="@id/tvFirstName"
        android:layout_toEndOf="@+id/tvFirstName"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
